# pesuacademy

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml
dev/: .buildinfo  genindex.html  index.html  modules.html  pesuacademy.html
dev/.doctrees/: environment.pickle  index.doctree  installation.doctree  introduction.doctree  modules.doctree  pesuacademy.doctree  pesuacademy.exceptions.doctree  pesuacademy.pages.doctree  pesuacademy.util.doctree
dev/_modules/: index.html
dev/_modules/pesuacademy/: pesuacademy.html
dev/_modules/pesuacademy/exceptions/: authentication.html
dev/_modules/pesuacademy/models/: announcement.html  profile.html  seating_information.html
dev/_sources/: pesuacademy.exceptions.rst.txt
docs/: Makefile  conf.py  index.rst  modules.rst
docs/_build/html/: genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  pesuacademy.exceptions.html  pesuacademy.html  pesuacademy.pages.html  pesuacademy.util.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  installation.doctree  introduction.doctree  modules.doctree  pesuacademy.doctree  pesuacademy.exceptions.doctree  pesuacademy.pages.doctree  pesuacademy.util.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pesuacademy/: pesuacademy.html
docs/_build/html/_modules/pesuacademy/exceptions/: authentication.html  csrf.html
docs/_build/html/_sources/: modules.rst.txt  pesuacademy.models.rst.txt  pesuacademy.pages.rst.txt  pesuacademy.rst.txt  pesuacademy.util.rst.txt
pesuacademy/: __init__.py
(+6 files in other folders)
